# git-changelog

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  changelog.toml  package-lock.json  package.json
.github/workflows/: rust.yml
src/: conf.rs  lib.rs  logger.rs  main.rs  parser.rs
templates/: changelog.md  changelog.mjml
