[package]
name = "git-changelog"
description = "Generate a changelog using the git commit history"
version = "0.2.0"
authors = ["Florentin DUBOIS <florentin.dubois@hey.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
askama = "^0.10.5"
git2 = "^0.13.15"
structopt = { version = "^0.3.21", features = ["paw"] }
chrono = "^0.4.19"
config = "^0.10.1"
serde = { version = "^1.0.118", features = ["derive"] }
slog = "^2.7.0"
slog-term = "^2.4.1"
slog-async = "^2.3.0"
slog-scope = "^4.1.2"
regex = "^1.3.1"
strfmt = "^0.1.6"
paw = "^1.0.0"

[build-dependencies]
askama = "^0.10.5"
git2 = "^0.13.15"
chrono = "^0.4.19"

[profile.release]
lto = true

[profile.bench]
lto = true
